finesse the experimental part for the f-s model

--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -29,3 +29,34 @@
   howpublished="\url{https://github.com/matchescu/experiment-data}",
   note={Online; accessed 25.10.2023},
 }
+
+@inproceedings{ pandas2010,
+  author    = { {W}es {M}c{K}inney },
+  title     = { {D}ata {S}tructures for {S}tatistical {C}omputing in {P}ython },
+  booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
+  pages     = { 56 - 61 },
+  year      = { 2010 },
+  editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
+  doi       = { 10.25080/Majora-92bf1922-00a }
+}
+
+@article{finley1996,
+  title={The Finley affair: A signal event in the history of forecast verification},
+  author={Murphy, Allan H},
+  journal={Weather and forecasting},
+  volume={11},
+  number={1},
+  pages={3--20},
+  year={1996}
+}
+
+@article{jaccard1912,
+  title={The distribution of the flora in the alpine zone. 1},
+  author={Jaccard, Paul},
+  journal={New phytologist},
+  volume={11},
+  number={2},
+  pages={37--50},
+  year={1912},
+  publisher={Wiley Online Library}
+}
