--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -114,3 +114,10 @@ publisher={The Australian National University}
   journal={arXiv preprint arXiv:2004.00584},
   year={2020}
 }
+
+@article{hitesh2012,
+  title={Entity resolution evaluation measures},
+  author={Maidasani, Hitesh and Namata, Galileo and Huang, Bert and Getoor, Lise},
+  journal={University of Maryland, Tech. Rep.},
+  year={2012}
+}
