add algebraic model description

--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -60,3 +60,16 @@
   year={1912},
   publisher={Wiley Online Library}
 }
+
+@book{hoffman1971linear,
+  title={Linear algebra},
+  author={Hoffman, Kenneth},
+  year={1971}
+}
+
+@book{halmos1960naive,
+  title={Naive set theory},
+  author={Halmos, Paul Richard},
+  year={1960},
+  publisher={van Nostrand}
+}
