--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -31,6 +31,15 @@ pages = {1183-1210}
   publisher={Elsevier}
 }
 
+@incollection{tal2007algebraic,
+  title={An algebraic approach to data quality metrics for entity resolution over large datasets},
+  author={Talburt, John and Wang, Richard and Hess, Kimberly and Kuo, Emily},
+  booktitle={Information quality management: Theory and applications},
+  pages={1--22},
+  year={2007},
+  publisher={IGI Global}
+}
+
 @article{Ben2009Swoosh,
   title={Swoosh: a generic approach to entity resolution},
   author={Benjelloun, Omar and Garcia-Molina, Hector and Menestrina, David and Su, Qi and Whang, Steven Euijong and Widom, Jennifer},
@@ -120,4 +129,36 @@ publisher={The Australian National University}
   author={Maidasani, Hitesh and Namata, Galileo and Huang, Bert and Getoor, Lise},
   journal={University of Maryland, Tech. Rep.},
   year={2012}
+}
+
+@article{rand1971,
+  title={Objective criteria for the evaluation of clustering methods},
+  author={Rand, William M},
+  journal={Journal of the American Statistical association},
+  volume={66},
+  number={336},
+  pages={846--850},
+  year={1971},
+  publisher={Taylor \& Francis}
+}
+
+@article{adjrand2001,
+  title={Details of the adjusted rand index and clustering algorithms, supplement to the paper an empirical study on principal component analysis for clustering gene expression data},
+  author={Yeung, Ka Yee and Ruzzo, Walter L},
+  journal={Bioinformatics},
+  volume={17},
+  number={9},
+  pages={763--774},
+  year={2001},
+  publisher={Citeseer}
+}
+
+@article{adjrand1985,
+  title={Comparing partitions},
+  author={Hubert, Lawrence and Arabie, Phipps},
+  journal={Journal of classification},
+  volume={2},
+  pages={193--218},
+  year={1985},
+  publisher={Springer}
 }
