--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -448,23 +448,23 @@
     
     \begin{defn}
     Given an entity resolution task $e: Ref \rightarrow Res$ and the ground
-    truth $G$ for the input entity reference domain $Ref$, a \textit{qualitative
-    evaluator} is an idempotent function $q: Res \rightarrow \mathbb{R}$ that
+    truth $G$ for the input entity reference domain $Ref$, a \textit{quality
+    metric} is an idempotent function $q: Res \rightarrow \mathbb{R}$ that
     measures the similarity between the input of the function and $G$.
     \end{defn}
 
-    In practice, we should strive to implement qualitative evaluators as
-    \textit{pure} functions in the sense that running them on a computer will
-    not entail any side-effects.
+    In practice, we should strive to implement quality metric as \textit{pure}
+    functions in the sense that running them on a computer will not entail any
+    side-effects.
 
     As stated before, the shape and structure of the items in $Res$, including
     $G$, depends on the mathematical model underpining a specific entity
     resolution task implementation.
-    Because the input domain of the qualitative evaluators changes according to
-    the used mathematical model, the set of qualitative evaluators available for
-    describing the qualitative performance of a certain entity resolution task
-    $Q = \{q_y \mid y \in \mathbb{N}\}$ is dependent on the mathematical model
-    used for implementing that task.
+    Because the input domain of the quality metrics changes according to the
+    used mathematical model, the set of quality metrics available for describing
+    the performance of a certain entity resolution task $Q = \{q_y \mid y \in
+    \mathbb{N}\}$ is dependent on the mathematical model used for implementing
+    that task.
 
     \subsection[ere]{Entity Resolution Evaluation}\label{sec:ere}
 
@@ -472,10 +472,10 @@
     long as they can be evaluated using the same set $Q$ of qualitative
     evaluators.
     Note that if the entity resolution $e_1$ can be evaluated using a set of
-    qualitative evaluators $Q_1$ and $e_2$ can be evaluated using a set of
-    qualitative evaluators $Q_2$ such that $Q_1 \cap Q_2 \neq \emptyset$, we
-    have a set of qualitative evaluators $Q_\cap = Q_1 \cap Q_2$ that allows us
-    to compare $e_1$ and $e_2$ based on $Q_\cap$.
+    quality metrics $Q_1$ and $e_2$ can be evaluated using a set of quality
+    metrics $Q_2$ such that $Q_1 \cap Q_2 \neq \emptyset$, we have a set of
+    quality metrics $Q_\cap = Q_1 \cap Q_2$ that allows us to compare $e_1$ and
+    $e_2$ based on $Q_\cap$.
     Future developments will seek to further loosen this constraint to allow
     comparing entity resolution tasks that do not share a set of qualitative
     evaluators.
@@ -486,11 +486,11 @@
         Given
         \begin{itemize}
             \item the set of entity references $Ref$,
-            \item a set of qualitative evaluators $Q$ that are common to all
+            \item a set of quality metrics $Q$ that are common to all
             entity resolution tasks $e_i : Ref -> Res$, $i \in \mathbb{N}$
             \item the ground truth $G$ for the input domain $Ref$,
-            \item the qualitative evaluator results $V_i=\{q_{i} \mid q_{i} = q(G, e_i), q \in Q\},
-            i \in \mathbb{N}$,
+            \item the quality metric results
+            $V_i=\{q_{i} \mid q_{i} = q(G, e_i), q \in Q\}, i \in \mathbb{N}$,
         \end{itemize}   
         we define the comparison of the entity resolution tasks above as
         $C : (
@@ -726,8 +726,8 @@ C(V_i, V_j) = \left\{
 
     \subsubsection[fms-measure]{Measurements}\label{fsm-measure}
 
-    The qualitative evaluators specific to this mathematical model are among
-    the best known.
+    The quality metrics that are specific to this mathematical model can be any
+    of the very broadly used statistical metrics.
     Because we have a clear definition of the Type I and Type II errors, we can
     give a clear context for the notions of true and false positive and true and
     false negative.
@@ -748,7 +748,7 @@ C(V_i, V_j) = \left\{
         be in $U$, but should be in $M$.
     \end{itemize}
 
-    Qualitative evaluators for this model work by comparing a ground truth that
+    Quality metrics for this model work by comparing a ground truth that
     containing the set of ideal pairs of tuples to the entity resolution task's
     output.
     $M$ is effectively the ground truth in this context.
@@ -756,8 +756,8 @@ C(V_i, V_j) = \left\{
     that have to do with $M$: true and false positives, as well as false
     negatives.
 
-    With this in mind we finally define the three qualitative evaluators that
-    are widely used with this model:
+    With this in mind we finally define the three quality metrics that are
+    widely used with this model:
 
     \begin{align}
     Precision&=\frac{TP}{TP+FP} \\
@@ -778,15 +778,229 @@ C(V_i, V_j) = \left\{
 
     \subsection[algebraic]{Algebraic Model}\label{subsec:algebraic}
 
-    John R. Talburt proposes this model. 
-    \textcolor{green}{add a reference!}
+    Initially proposed as a model to discern information quality in entity
+    resolution over large datasets\cite{tal2007algebraic}, the algebraic model
+    for entity resolution was later refined to describe entity resolution
+    itself\cite{Tal11}.
+    Although entity resolution systems and tasks have not been implemented with
+    this specific model in mind, its elegance allows it to be applied to
+    virtually any entity resolution task.
+    This model relaxes the constraint of the Fellegi-Sunter model\hyperref{subsec:fsm}
+    around item uniqueness within an information source.
+    It also addresses transitive matches.
+    
+    \subsubsection[algdesc]{Description}\label{subsubsec:algdesc}
+
+    The core tenet of this model is that entity resolution is an \textit{
+    equivalence relation} which is a concept defined in set theory.
+    Let's start by defining a few algebraic terms.
+    
+    \begin{defn} If $X$ is a set and $R$ is a rule that takes two elements from
+    $X$, $x$ and $y$, and tells us whether $x$ is in relationship $y$ in the way
+    denoted with $R$ then we call $R$ a \textit{binary relation} on
+    $X$\cite{hoffman1971linear}.
+    \end{defn}
+
+    We can represent $R$ as a function $R:X \times X \rightarrow \{0,1\}$ where
+    $R(x,y)=1$ if $x$ is in relation $R$ with $y$ and $R(x,y)=0$ otherwise.
+    
+    \begin{defn}If R is a binary relation on the set $X$, it is convenient to
+    write $xRy$ when $R(x, y) = 1$. A binary relation R is called:
+
+    \begin{enumerate}
+        \item reflexive, if $xRx, \forall x \in X$;
+        \item symmetric, if $yRx \implies xRy, \forall x,y \in X$;
+        \item transitive, if $xRz \land yRz \implies xRz, \forall x,y,z \in X$;
+    \end{enumerate}
+
+    An \textit{equivalence relation} on $X$ is a reflexive, symmetric, and
+    transitive binary relation on $X$\cite{hoffman1971linear}.
+    \end{defn}
+
+    Equivalence relations already seem to describe a lot of the matching process
+    that happens in entity resolution.
+    Let's observe that equivalence relations work on sets for now and move on.
+
+    An equivalence relation over a set $X$ generates an equivalence class.
+
+    \begin{defn}Suppose $R$ is an equivalence relation on the set X. If $x$ is
+    an element of X, let $\bar{x}$ denote the set $\{y \in X | xRy\}$.
+    $\bar{x}$ is called the \textit{equivalence class} of $x$ (for the
+    equivalence relation R)\cite{hoffman1971linear}.
+    \end{defn}
+
+    Since R is an equivalence relation, the equivalence classes for R have the
+    following properties\cite{hoffman1971linear}:
+    \begin{enumerate}
+        \item $xRx \in \bar{x} \implies \bar{x} \neq \emptyset$,
+        \item $y\in\bar{x}\iff~x\in\bar{y},~\forall x,y \in X$ because
+        equivalence relations are symmetric,
+        \item $\forall x,y \in X$ $\bar{x}$ is either identical with $\bar{y}$
+        or they have no elements in common\cite{hoffman1971linear,Tal11}.
+    \end{enumerate}
+    
+    The last fundamental notion from set theory that is needed to construct the
+    algebraic model of entity resolution is the \textit{partition} of a set.
+
+    \begin{defn}
+        A \textit{partition} of a set $X$ is a disjoint collection of non-empty
+        subsets of $X$ whose union is $X$\cite{halmos1960naive,Tal11}.
+    \end{defn}
+
+    Things come together starting with the simple observation that an element
+    belonging to one of the sets from a partition over $X$ is in a relation with
+    itself and other elements from the same set.
+    We say that this relation is \textit{induced} by the partition.
+    From the point of view of the above relation, we say that it
+    \textit{generated} the partition.
+
+    When the partition in question is the set of equivalence classes over $X$,
+    then the the induced relation is an equivalence relation.
+    Conversely, an equivalence relation $R$ in $X$ will generate a partition
+    over $X$ comprised by the equivalence classes of $X$\cite{halmos1960naive,
+    Tal11}.
+
+    In the algebraic model, entity resolution is stated to be an equivalence
+    relation over the set comprising all input entity references.
+    Let's denote this relation with $ER$ and state that if $xERy$ then x and y
+    are linked\cite{Tal11}.
+
+    It is important to note the difference between the equivalence relation and
+    pairwise matching.
+    Matching itself is still done pairwise, however it does not really matter
+    how.
+    On the other hand, the equivalence relation induces a partition over the
+    initial set of references by definition.
+    Also by definition, it is transitive.
+    If we denote by $P$ the partition generated by the entity resolution
+    relation and we have $xERy \land yERz \implies xERz$ and that means that 
+    at least $\{x, y, z\} \in P$.
+    We usually call the members of the partition $P$ \textit{clusters} and we
+    say that $x$, $y$ and $z$ belong to the same cluster or are clustered
+    together.
+
+    A last point of notice is that entity resolution tasks do not necessarily
+    generate a unique outcome\cite{Tal11}.
+    Depending on the order in which entity references are processed, entity
+    resolution tasks might generate different partitions.
+    The entity resolution tasks where the order in which entity references are
+    processed is irrelevant are called \textit{sequence neutral}\cite{Tal11}.
+
+    \subsubsection[algrel]{How Does It Relate}\label{subsubsec:algrel}
+
+    The algebraic model is very similar to our own view over entity resolution.
+    For one, the notions of attribute and entity reference essentially mean the
+    same thing.
+    Then the idea that entity resolution is an equivalence relation over an
+    input set of entity references matches our view on the matter.
+    The difference lies only with the specific requirement that the input be
+    a set in the algebraic model.
+    This means that we won't be able to apply the algebraic model on input data
+    that is not a set.
+    
+    Having to use only distinct references in the input is a problem in practice
+    because most real data where we care about entity resolution is ambiguous.
+    We can overcome this limitation by introducing attributes that serve as
+    disambiguation clues in the matching process.
+
+    We should note that the algebraic model does not concern itself with how
+    entity references end up being part of the same set (i.e it does not relay
+    too much information about the extraction process).
+    Therefore the notions of information source and trait have a marginal impact
+    here.
+    In fact, the only place where we feel traits might be important is in the
+    discussion related to the order in which entity references are processed.
+    In our view, the order of processing is one of the traits of the entity
+    resolution task.
+
+    With respect to the output, it's plain that both the ground truth and the
+    result of the entity resolution task itself are partitions over the input
+    set of entity references.
+    The ground truth $G$ is the ideal partition over the input set of entity
+    references $Ref$ with regard to the relationship that is defined by entity
+    references that reference the same real-world entity.
+    Each cluster in the ground truth refers to exactly one real-world entity.
+    The result of the entity resolution task $Res$ is another partition over
+    $Ref$.
+
+    An interesting discussion here is around designing algorithms that construct
+    partitions generated by the entity resolution relation.
+    In the introduction of this paper we discussed \textit{clustering} as one of
+    the central tasks in entity resolution.
+    Constructing partitions is such a task.
+    For example, using a particular \textit{merge} function the
+    \textit{Swoosh}\cite{Ben2009Swoosh} family of algorithms (to which we will
+    come back in the next section) seems to be a good candidate for building
+    partitions.
+    
+    Another interesting aspect is that by abstracting away matching, we can
+    easily apply this model for any type of entity resolution algorithm that
+    implements either deterministic (i.e exact) matching or
+    \hyperref[subsec:fsm]{probabilistic matching}.
+
+    \subsubsection[algeval]{Quality Metrics}\label{subsubsec:algeval}
+
+    The quality metrics for entity resolution under the algebraic model have to
+    do with computing the similarity of partitions.
+    In our case, these metrics are applied to compare the partitions $G$ and
+    $Res$.
+    Many such metrics exist\cite{hitesh2012} and we chose to cover some of them
+    which either by lineage or by their popularity have peaked our interest.
+
+    The first among these is the Rand index introduced by William Rand in
+    1971\cite{rand1971}.
+    This index computes the similarity of partitions by comparing pairs of
+    elements formed from the elements of the clusters of each partition.
+    Supposing that:
     \begin{itemize}
-        \item ER is an equivalence relation on a set of items
-        \item reflexive, symmetric, transitive
-        \item ER is the same as the partition generated by a given equivalence relation over an input set
-        \item very easy to work with and very comprehensive (transitivity, identity resolution, etc)
-        \item the entity profile is a partition class (a cluster)
+        \item $a$ is the number of pairs that are in the same cluster in $G$ and
+        also the same cluster in $Res$,
+        \item $b$ is the number of pairs that are in the same cluster in $G$ but
+        are not in the same cluster in $Res$,
+        \item $c$ is the number of pairs that are in the same cluster in $Res$
+        but are not in the same cluster in $G$,
+        \item $d$ is the number of pairs that are in different clusters.
     \end{itemize}
+    then the Rand index is defined by the quantity
+    $\frac{a+d}{a+b+c+d}$\cite{adjrand2001}.
+
+    The minimum value of the Rand index is 0, meaning nothing matches, while its
+    maximum value is 1, indicating a perfect match.
+    The obvious use of the Rand index is to rate the similarity of two
+    partitions.
+    Its less obvious use is to consider $1 - Rand Index$ the distance between
+    two partitions.
+
+    The expected value of the Rand index of two random partitions does not take
+    a constant value (say zero)\cite{adjrand2001}.
+    That lead to the introduction of the adjusted Rand index which follows the
+    same principles, but uses a specific distribution for
+    randomness\cite{adjrand1985}.
+    Without going into detail, we can provide a formula for the adjusted Rand
+    index by using the quantities we defined for the Rand index\cite{Tal11}.
+    \[
+        Adjusted~Rand~Index = \frac{
+            a - (\frac{(a+b)\dot(a+c)}{a+b+c+d})
+        }{
+            \frac{(2\dot a+b+c)}{2}-(\frac{(a+b)\dot(a+c)}{a+b+c+d})
+        }
+    \]
+
+    The third quality metric we can use for comparing partition similarity is
+    the Talburt-Wang index.
+    The merit of this metric is that it closely follows the Rand index, but is
+    much simpler to compute\cite{Tal11}.
+    \[
+        TWI = \frac{\sqrt{|G|\dot|Ref|}}{|G \cap Ref|},
+    \]
+    where if $X$ is a set then $|X|$ represents the size of $X$.
+
+    The Talburt-Wang index takes values between 0 and 1 as well, with 1
+    indicating a perfect match.
+
+    Other similarity metrics used to compare partitions are the pairwise and
+    cluster precision and recall metrics.
+    
 
     \subsection[serf]{Stanford Entity Resolution Framework Model}\label{subsec:serf}
 
