--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -30,6 +30,16 @@
   note={Online; accessed 25.10.2023},
 }
 
+@misc{matchescu,
+  author = {Andrei Olar},
+  title = {matchescu-cli},
+  year = {2023},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/matchescu/cli}},
+  commit = {ef599359648a35fb2bfd784568b2e47dd2cb08fc}
+}
+
 @inproceedings{ pandas2010,
   author    = { {W}es {M}c{K}inney },
   title     = { {D}ata {S}tructures for {S}tatistical {C}omputing in {P}ython },
@@ -38,6 +48,14 @@
   year      = { 2010 },
   editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
   doi       = { 10.25080/Majora-92bf1922-00a }
+}
+
+@misc{python,
+  title={Python Language Reference, version 3.11},
+  author={Python Software Foundation},
+  year={2022},
+  howpublished="\url{https://www.python.org}",
+  note={Online; Accessed: 18.11.2023},
 }
 
 @article{finley1996,
